refactor: make sure each class does one major thing